--- a/presentation/index.html
+++ b/presentation/index.html
@@ -563,7 +563,7 @@
   <div class="media-body">
 
     <h3 class="article-title mb-0 mt-0">
-      <a href="/presentation/unpacking-erp-responses-in-artificial-language-learning/" >Unpacking ERP Responses in Artificial Language Learning</a>
+      <a href="/presentation/unpacking-erp-responses-in-artificial-language-learning/" >Unpacking ERP responses in artificial language learning</a>
     </h3>
 
     
@@ -1465,7 +1465,7 @@
   <div class="media-body">
 
     <h3 class="article-title mb-0 mt-0">
-      <a href="/presentation/2020-11-26-mixed-effects-models-in-r-and-a-new-tool-for-data-simulation/" >Mixed-effects models in R, and a new tool for data simulation</a>
+      <a href="/presentation/2020-11-26-mixed-effects-models-in-r-and-a-new-tool-for-data-simulation/" >Mixed-effects models in R and a new tool for data simulation</a>
     </h3>
 
     
