--- a/index.html
+++ b/index.html
@@ -4263,7 +4263,7 @@
 <tbody>
 <tr>
 <td><div style='white-space:nowrap;'>May – July 2018</div></td>
-<td>Service Analyst. <a href="https://onfido.com/">Onfido</a>, London, UK <br> <span style='color:#5A826F;'>I was responsible for verifying identity checks through random sampling and data analysis, leveraging insights retrieved from Power BI. I designed and implemented a self-updating Excel dashboard with dynamic tables and visualizations to streamline data reporting. My role involved close collaboration with service analysts and engineers to ensure accurate and actionable insights. Additionally, I utilised tools such as Jira, Confluence and Zendesk to support project management, documentation and customer service processes.</span></td>
+<td>Service Analyst. <a href="https://onfido.com/">Onfido</a>, London, UK <br> <span style='color:#5A826F;'>I was responsible for verifying identity checks through random sampling and data analysis, leveraging insights retrieved from Power BI. I designed and implemented a self-updating Excel dashboard with dynamic tables and visualisations to streamline data reporting. My role involved close collaboration with service analysts and engineers to ensure accurate and actionable insights. Additionally, I utilised tools such as Jira, Confluence and Zendesk to support project management, documentation and customer service processes.</span></td>
 </tr>
 <tr>
 <td><div style='white-space:nowrap;'>Dec 2015 – Feb 2016</div></td>
