--- a/publication/pablo-bernabeu-2022-phd-thesis/index.html
+++ b/publication/pablo-bernabeu-2022-phd-thesis/index.html
@@ -2011,6 +2011,8 @@
   
   <a class="badge badge-light" href="/tags/reading/">reading</a>
   
+  <a class="badge badge-light" href="/tags/individual-differences/">individual differences</a>
+  
   <a class="badge badge-light" href="/tags/linear-mixed-effects-models/">linear mixed-effects models</a>
   
   <a class="badge badge-light" href="/tags/frequentist-statistics/">frequentist statistics</a>
