--- a/publication/language-vision-conceptual-processing/index.html
+++ b/publication/language-vision-conceptual-processing/index.html
@@ -785,6 +785,11 @@
 </h3>
 </button>
 <p></a></p>
+<div id="related-ai-assisted-podcast" class="section level3">
+<h3>Related AI-assisted podcast</h3>
+<iframe style="border-radius:12px" src="https://open.spotify.com/embed/episode/32uBJncddvl04ID4WlSkhm?utm_source=generator" width="100%" height="152" frameBorder="0" allowfullscreen allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy">
+</iframe>
+</div>
 <div id="reference" class="section level3">
 <h3>Reference</h3>
 <p>Bernabeu, P., Lynott, D., &amp; Connell, L. (2022). <em>Language and vision in conceptual processing: Multilevel analysis and statistical power</em>. OSF. <a href="https://osf.io/dnskh" class="uri">https://osf.io/dnskh</a></p>
