--- a/publication/chen-etal-inprep/index.html
+++ b/publication/chen-etal-inprep/index.html
@@ -766,6 +766,8 @@
 <br>
 <br>
 <p><strong>Related:</strong> <a href="https://doi.org/10.1017/S0140525X18000730">the value of a replication study during PhD</a>.</p>
+<h3 id="related-ai-assisted-podcast">Related AI-assisted podcast</h3>
+<iframe style="border-radius:12px" src="https://open.spotify.com/embed/episode/32uBJncddvl04ID4WlSkhm?utm_source=generator" width="100%" height="152" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
 <h3 id="reference">Reference</h3>
 <div class = 'hanging-indent'>
 <p>Chen, S.-C., Buchanan, E. M., Kekecs, Z., Miller, J. K., Szabelska, A., Aczel, B., Bernabeu, P., Forscher, P. S., Szuts, A., Vally, D. Z., Al-Hoorie, A. H., Helmy, M., Silva, C. S. A. da, Silva, L. O. da, Moraes, Y. L. de, Hsu, R. M. C. S., Mafra, A. L., Valentova, J. V., Varella, M. A. C., … Chartier, C. R. (2023). <em>Investigating object orientation effects across 18 languages</em>. OSF Preprints. <a href="https://doi.org/10.31219/osf.io/2qf6w">https://doi.org/10.31219/osf.io/2qf6w</a></p>
