--- a/index.html
+++ b/index.html
@@ -4721,11 +4721,11 @@ style = "position:absolute; top:0; left:0; width:95%; height:95%;"></iframe>
 style = "position:absolute; top:0; left:0; width:95%; height:95%;"></iframe>
 </div>
 <h3 id="span-stylecolorgrey-font-size702021-spannbsp-linguistic-and-embodied-systems-in-conceptual-processing-variation-across-individuals-and-itemspresentationlinguistic-and-embodied-systems-in-conceptual-processing-variation-across-individuals-and-items"><span style='color:grey; font-size:70%;'>2021 ·</span>  <a href="/presentation/linguistic-and-embodied-systems-in-conceptual-processing-variation-across-individuals-and-items">Linguistic and embodied systems in conceptual processing: Variation across individuals and items</a></h3>
-<div style = "margin-top: 20px; margin-left: 20%;">
+<div style = "position: relative; margin-top: 20px;">
 <a href = 'https://www.youtube.com/watch?v=y2bopgYWYvE&ab_channel=LancasterPsychology'>
-<img src = 'https://cdn.pixabay.com/photo/2016/08/20/06/09/video-1606945_960_720.png' width = 50%></a>
+<img src = '/presentation/linguistic-and-embodied-systems-in-conceptual-processing-variation-across-individuals-and-items/img/thumbnail.png'></a>
 </div>
-<div style = 'padding-bottom: 7%;'></div>
+<div style = 'padding-bottom: 3.5%;'></div>
 <h3 id="span-stylecolorgrey-font-size702020-spannbsp-reproducibilidad-en-torno-a-una-aplicacin-webpresentation2020-10-08-reproducibilidad-en-torno-a-una-aplicacion-web"><span style='color:grey; font-size:70%;'>2020 ·</span>  <a href="/presentation/2020-10-08-reproducibilidad-en-torno-a-una-aplicacion-web">Reproducibilidad en torno a una aplicación web</a></h3>
 <div style = "position: relative; margin-top: 20px; padding-top: 56.25%;">
 <iframe src="https://www.youtube-nocookie.com/embed/1njLOAWqLPM" frameborder="0" allowfullscreen
@@ -4756,7 +4756,7 @@ style = "position:absolute; top:0; left:0; width:95%; height:95%;"></iframe>
 <iframe src="https://www.youtube-nocookie.com/embed/F-MQ8BYwLn4" frameborder="0" allowfullscreen
 style = "position:absolute; top:0; left:0; width:95%; height:95%;"></iframe>
 </div>
-<h3 id="span-stylecolorgrey-font-size702019-spannbsp-demonstration-of-procedure-for-psa-experimentspublicationchen-etal-inprep"><span style='color:grey; font-size:70%;'>2019 ·</span>  Demonstration of procedure for <a href="/publication/chen-etal-inprep/">PSA experiments</a></h3>
+<h3 id="span-stylecolorgrey-font-size702019-spannbsp-demonstration-of-procedure-for-psa-experiments-1publicationchen-etal-inprep-and-2publicationmulti-region-investigation-of-man-as-default-in-attitudes"><span style='color:grey; font-size:70%;'>2019 ·</span>  Demonstration of procedure for PSA experiments <a href="/publication/chen-etal-inprep">1</a> and <a href="/publication/multi-region-investigation-of-man-as-default-in-attitudes">2</a></h3>
 <iframe src="https://mfr.de-1.osf.io/render?url=https://osf.io/download/h36wr/?direct%26mode=render"
     style="margin-top:10px"
     width="100%"
