--- a/publication/multi-region-investigation-of-man-as-default-in-attitudes/index.html
+++ b/publication/multi-region-investigation-of-man-as-default-in-attitudes/index.html
@@ -768,6 +768,14 @@
 
 <div id="read-the-preregistration" class="section level4">
 <h4>  <i class="fa fa-file"></i>  <a href='https://osf.io/w4q6t'>Read the preregistration</a></h4>
+<div style="margin-top:5%;">
+
+</div>
+<div id="video-demonstration-of-the-procedure-followed-in-our-lab" class="section level5">
+<h5><a href='https://osf.io/h36wr/'>Video demonstration of the procedure followed in our lab</a></h5>
+<iframe src="https://mfr.de-1.osf.io/render?url=https://osf.io/download/h36wr/?direct%26mode=render" width="100%" scrolling="yes" height="394px" marginheight="0" frameborder="0" allowfullscreen webkitallowfullscreen>
+</iframe>
+</div>
 </div>
 <div id="reference" class="section level3">
 <h3>Reference</h3>
