--- a/index.html
+++ b/index.html
@@ -4742,7 +4742,7 @@
 </tr>
 <tr>
 <td><strong>Web, data, typesetting and AI</strong></td>
-<td>HTML, CSS, Javascript, regular expressions, Git, Linux, bash, containerisation, Python, MediaPipe, SQL, AI-assisted programming, high-performance computing, LaTeX (e.g., <a href="https://github.com/pablobernabeu"><i class="fas fa-link"></i></a>), Zotero, Google Analytics</td>
+<td>HTML, CSS, Javascript, regular expressions, Git, Linux, bash, containerisation, Python, MediaPipe, SQL, AI-assisted development, high-performance computing, LaTeX (e.g., <a href="https://github.com/pablobernabeu"><i class="fas fa-link"></i></a>), Zotero, Google Analytics</td>
 </tr>
 <tr>
 <td><strong>Business and administration</strong></td>
