--- a/index.html
+++ b/index.html
@@ -1359,7 +1359,7 @@
   
     
   
-  <a class="btn btn-outline-primary my-1 mr-1 btn-sm" href="https://osf.io/6pxj4" target="_blank" rel="noopener">
+  <a class="btn btn-outline-primary my-1 mr-1 btn-sm" href="https://osf.io/tjr54" target="_blank" rel="noopener">
     
     Preregistration
   </a>
@@ -1684,7 +1684,7 @@
   
   <span class="middot-divider"></span>
   <span class="article-categories">
-    <i class="fas fa-folder mr-1"></i><a href="/categories/conceptual-processing/">conceptual processing</a>, <a href="/categories/embodied-cognition/">embodied cognition</a>, <a href="/categories/statistical-power/">statistical power`</a>, <a href="/categories/research-methods/">research methods</a>, <a href="/categories/statistics/">statistics</a></span>
+    <i class="fas fa-folder mr-1"></i><a href="/categories/conceptual-processing/">conceptual processing</a>, <a href="/categories/embodied-cognition/">embodied cognition</a>, <a href="/categories/statistical-power/">statistical power</a>, <a href="/categories/research-methods/">research methods</a>, <a href="/categories/statistics/">statistics</a></span>
   
 
 </div>
@@ -4730,7 +4730,7 @@
 <tbody>
 <tr>
 <td><strong>Science</strong></td>
-<td>Best practices for research integrity, data protection, data management, technical documentation, open science, effective collaboration and project management. Electroencephalography—lab setup, recording, preprocessing, analysis (e.g., <a href="https://osf.io/974k8"><i class="fas fa-link"></i></a>)—, BrainVision, transcranial brain stimulation, eye tracking, online experiments, jsPsych, OpenSesame, Gorilla, ELAN, Turnitin</td>
+<td>Best practices for research integrity, data protection, data management, technical documentation, open science, effective collaboration and project management. Electroencephalography—lab setup, recording, preprocessing, analysis (e.g., <a href="https://osf.io/974k8"><i class="fas fa-link"></i></a>)—, BrainVision, transcranial brain stimulation, eye tracking, online experiments, jsPsych, OpenSesame (e.g., <a href="https://github.com/pablobernabeu"><i class="fas fa-link"></i></a>), Gorilla, ELAN, Turnitin, Zotero</td>
 </tr>
 <tr>
 <td><strong>Statistics</strong></td>
@@ -4741,12 +4741,12 @@
 <td>Statistics, modular programming, <i class="fa-brands fa-r-project" aria-label="R"></i> Markdown, web applications and dashboards, Rhino, Crosstalk, Plotly, Leaflet, bibliometrics, Binder environments (e.g., <a href="https://github.com/pablobernabeu"><i class="fas fa-link"></i></a>), big data, natural language processing (e.g., <a href="https://github.com/pablobernabeu/VTT-Transcription-App/blob/main/index.Rmd"><i class="fas fa-link"></i></a>), Tidyverse (e.g., <a href="https://github.com/pablobernabeu/Experiment-simulation-app"><i class="fas fa-link"></i></a>)</td>
 </tr>
 <tr>
-<td><strong>Web, data, typesetting and AI</strong></td>
-<td>HTML, CSS, Javascript, regular expressions, Git, Linux, bash, containerisation, Python, MediaPipe, SQL, AI-assisted development, high-performance computing, LaTeX (e.g., <a href="https://github.com/pablobernabeu"><i class="fas fa-link"></i></a>), Zotero, Google Analytics</td>
+<td><strong>Web, data, Artificial Intelligence and typesetting</strong></td>
+<td>HTML, CSS, Javascript, regular expressions, Git, Linux, bash, containerisation, Python, MediaPipe, SQL, AI-assisted development, high-performance computing (incl. Slurm), LaTeX (e.g., <a href="https://github.com/pablobernabeu"><i class="fas fa-link"></i></a>)</td>
 </tr>
 <tr>
 <td><strong>Business and administration</strong></td>
-<td>Project management, technical documentation, quantitative and qualitative service analysis. Power BI, Zendesk, Jira, Confluence, Asana</td>
+<td>Project management, technical documentation, quantitative and qualitative service analysis. Power BI, Zendesk, Jira, Confluence, Asana, Google Analytics</td>
 </tr>
 <tr>
 <td><strong>Languages</strong></td>
@@ -4804,7 +4804,7 @@
   
     <div class="col-12 col-lg-4 section-heading">
       <h1>Videos and Podcasts</h1>
-      <p>Not the most riveting channel on <a href="https://www.youtube.com/channel/UCm3CfloakLprTWQuwjyjI2Q">YouTube</a>—much less aurally exciting on <a href="https://open.spotify.com/show/4QXENVjprdaGkTvOexGvD3">Spotify</a>. <br> <div style = 'position: relative; margin-top: 20px; padding-top: 56.25%;'><iframe src='https://www.youtube-nocookie.com/embed/nh7E1L8Evc8' frameborder='0' allowfullscreen style = 'position:absolute; top:0; left:0; width:87%; height:90%;'></iframe></div></p>
+      <p>Not the most riveting channel on <a href="https://www.youtube.com/channel/UCm3CfloakLprTWQuwjyjI2Q">YouTube</a>—much less aurally exciting on <a href="https://open.spotify.com/show/4QXENVjprdaGkTvOexGvD3">Spotify</a>. <br> <div style = 'position: relative; margin-top: 20px; padding-top: 56.25%;'><iframe src='https://www.youtube-nocookie.com/embed/nh7E1L8Evc8' frameborder='0' allowfullscreen style = 'position:absolute; top:0; left:0; width:70%; height:100%;'></iframe></div></p>
     </div>
     <div class="col-12 col-lg-8">
       <div style = "margin-bottom: -2.5%;"></div>
