--- a/publication/index.html
+++ b/publication/index.html
@@ -1139,7 +1139,7 @@
   
     
   
-  <a class="btn btn-outline-primary my-1 mr-1 btn-sm" href="https://osf.io/6pxj4" target="_blank" rel="noopener">
+  <a class="btn btn-outline-primary my-1 mr-1 btn-sm" href="https://osf.io/tjr54" target="_blank" rel="noopener">
     
     Preregistration
   </a>
