--- a/publication/third-language-longitudinal-data-artificial-language-learning-eeg/index.html
+++ b/publication/third-language-longitudinal-data-artificial-language-learning-eeg/index.html
@@ -903,7 +903,7 @@
   
     
   
-  <a class="btn btn-outline-primary my-1 mr-1" href="https://osf.io/6pxj4" target="_blank" rel="noopener">
+  <a class="btn btn-outline-primary my-1 mr-1" href="https://osf.io/tjr54" target="_blank" rel="noopener">
     
     Preregistration
   </a>
@@ -944,7 +944,7 @@
 
 
 <div id="read-the-preregistration" class="section level4">
-<h4>  <i class="fa fa-file"></i>  <a href='https://osf.io/6pxj4'>Read the preregistration</a></h4>
+<h4>  <i class="fa fa-file"></i>  <a href='https://osf.io/tjr54'>Read the preregistration</a></h4>
 </div>
 <div id="reference" class="section level3">
 <h3>Reference</h3>
