--- a/publication/chen-etal-inprep/index.html
+++ b/publication/chen-etal-inprep/index.html
@@ -938,7 +938,7 @@
 <h4 id="nbsp-i-classfa-fa-folderinbsp-a-hrefhttpsosfioe428pgeneral-projecta">  <i class="fa fa-folder"></i>  <a href='https://osf.io/e428p/'>General project</a></h4>
 <h4 id="nbsp-i-classfa-fa-fileinbsp-a-hrefhttpsdoiorg1031234osfiot2pjvpreregistrationa">  <i class="fa fa-file"></i>  <a href='https://doi.org/10.31234/osf.io/t2pjv'>Preregistration</a></h4>
 <h4 id="nbsp-i-classfa-fa-databaseinbsp-a-hrefhttpsosfiowaf48data-from-our-laba">  <i class="fa fa-database"></i>  <a href='https://osf.io/waf48/'>Data from our lab</a></h4>
-<h4 id="nbsp-i-classfas-fa-eyeinbsp-a-hrefhttpsosfioh36wrvideo-demonstration-of-the-procedure-followed-in-our-laba">  <i class="fas fa-eye"></i>  <a href='https://osf.io/h36wr/'>Video demonstration of the procedure followed in our lab</a></h4>
+<h5 id="a-hrefhttpsosfioh36wrvideo-demonstration-of-the-procedure-followed-in-our-laba"><a href='https://osf.io/h36wr/'>Video demonstration of the procedure followed in our lab</a></h5>
 <iframe src="https://mfr.de-1.osf.io/render?url=https://osf.io/download/h36wr/?direct%26mode=render"
     width="100%"
     scrolling="yes"
