--- a/publication/pablo-bernabeu-2022-phd-thesis/index.html
+++ b/publication/pablo-bernabeu-2022-phd-thesis/index.html
@@ -796,7 +796,7 @@
   
   <span class="middot-divider"></span>
   <span class="article-categories">
-    <i class="fas fa-folder mr-1"></i><a href="/categories/conceptual-processing/">conceptual processing</a>, <a href="/categories/embodied-cognition/">embodied cognition</a>, <a href="/categories/statistical-power/">statistical power`</a>, <a href="/categories/research-methods/">research methods</a>, <a href="/categories/statistics/">statistics</a></span>
+    <i class="fas fa-folder mr-1"></i><a href="/categories/conceptual-processing/">conceptual processing</a>, <a href="/categories/embodied-cognition/">embodied cognition</a>, <a href="/categories/statistical-power/">statistical power</a>, <a href="/categories/research-methods/">research methods</a>, <a href="/categories/statistics/">statistics</a></span>
   
 
 </div>
