--- a/index.html
+++ b/index.html
@@ -4884,7 +4884,7 @@
 </tr>
 <tr>
 <td><strong>Web, data, Artificial Intelligence and typesetting</strong></td>
-<td>HTML, CSS, Javascript, regular expressions, Git, Linux, bash, containerisation, Python, MediaPipe, SQL, AI-assisted development, high-performance computing (incl. Slurm), LaTeX (e.g., <a href="https://github.com/pablobernabeu"><i class="fas fa-link"></i></a>)</td>
+<td>HTML, CSS, Javascript, regular expressions, Git, Linux, bash, containerisation, Python, machine learning models including MediaPipe and Whisper, SQL, AI-assisted development (incl. GitHub Copilot), high-performance computing (incl. Slurm), LaTeX (e.g., <a href="https://github.com/pablobernabeu"><i class="fas fa-link"></i></a>)</td>
 </tr>
 <tr>
 <td><strong>Business and administration</strong></td>
@@ -4946,37 +4946,23 @@
   
     <div class="col-12 col-lg-4 section-heading">
       <h1>Videos and Podcasts</h1>
-      <p>Not the most riveting channel on <a href="https://www.youtube.com/channel/UCm3CfloakLprTWQuwjyjI2Q">YouTube</a>—much less aurally exciting on <a href="https://open.spotify.com/show/4QXENVjprdaGkTvOexGvD3">Spotify</a>. <br> <div style = 'position: relative; margin-top: 20px; padding-top: 56.25%;'><iframe src='https://www.youtube-nocookie.com/embed/nh7E1L8Evc8' frameborder='0' allowfullscreen style = 'position:absolute; top:0; left:0; width:70%; height:100%;'></iframe></div></p>
+      <p>Not the most riveting channel on <a href="https://www.youtube.com/playlist?list=PLJ8d7PauMiCs6TkzJfv5cT88oAJhzoy0N">YouTube</a>—much less on <a href="https://open.spotify.com/show/4QXENVjprdaGkTvOexGvD3">Spotify</a>, <a href="https://podcasts.apple.com/au/podcast/codex-mentis-science-and-tech-to-study-cognition/id1836910507">Apple Podcasts</a> and <a href="https://www.ivoox.com/en/podcast-codex-mentis-science-and-tech-to-study-cognition_sq_f12741704_1.html">iVoox</a>. <br> <div style = 'position: relative; margin-top: 20px; padding-top: 56.25%;'><iframe src='https://www.youtube-nocookie.com/embed/nh7E1L8Evc8' frameborder='0' allowfullscreen style = 'position:absolute; top:0; left:0; width:70%; height:100%;'></iframe></div></p>
     </div>
     <div class="col-12 col-lg-8">
       <div style = "margin-bottom: -2.5%;"></div>
-<h3 id="span-stylecolorgrey-font-size702025-spannbsp-the-architecture-of-meaning-inside-the-words-we-use"><span style='color:grey; font-size:70%;'>2025 ·</span>  The architecture of meaning: Inside the words we use</h3>
+<h3 id="span-stylecolorgrey-font-size702025-spannbsp-behind-the-curtains-methods-used-to-investigate-conceptual-processing"><span style='color:grey; font-size:70%;'>2025 ·</span>  Behind the curtains: Methods used to investigate conceptual processing</h3>
 <div class="max-w-2xl w-full p-6">
 <!-- This wrapper controls the state of the component -->
 <div id="collapsible-wrapper" class="collapsible-text-wrapper">
 <!-- This div contains the text that will be collapsed -->
 <div id="collapsible-content" class="collapsible-text-content">
 <p id="main-text" class="text-base leading-relaxed mb-0">
-<p><i class="fa-solid fa-wand-magic-sparkles" style='color:darkgrey;'></i> <span style='color:darkgrey; font-style:italic;'>Podcast created using Google Gemini and NotebookLM.</span></p>
-<p>What happens in your brain when you understand a simple word? It seems instantaneous, but this seemingly simple act is at the heart of one of the deepest mysteries of the human mind and has sparked one of the longest-running debates in cognitive science.</p>
-<p>In this episode of Codex Mentis, we journey deep into the architecture of meaning to explore the battle between two powerful ideas. For decades, scientists were divided. Is your brain a vast, abstract dictionary, processing words like &lsquo;kick&rsquo; by looking up amodal symbols and their connections to other symbols? Or is it a sophisticated simulator, where understanding &lsquo;kick&rsquo; involves partially re-enacting the physical experience in your motor cortex?</p>
-<p>We begin with a landmark finding—the &lsquo;object orientation effect&rsquo;—that seemed to provide a knockout punch for the simulation theory, only to see this cornerstone of embodied cognition crumble under the immense rigor of a massive, multi-lab replication study involving thousands of participants across 18 languages. This &lsquo;failed&rsquo; replication didn't end the debate; it forced the entire field to evolve, moving beyond simple dichotomies and toward a more nuanced and profound understanding of the mind.</p>
-<p>This episode unpacks the state-of-the-art &lsquo;hybrid&rsquo; model of conceptual processing, which is at the forefront of modern cognitive science. Discover how your brain pragmatically and flexibly uses two complementary systems in a dynamic partnership. The first is a fast, efficient language system that operates on statistical patterns, much like a modern AI, providing a &lsquo;shallow&rsquo; but rapid understanding of a word's context. The second is a slower, more resource-intensive sensorimotor system that provides &lsquo;deep&rsquo; grounding by simulating a word's connection to our lived, bodily experience.</p>
-<p>The episode delves into the groundbreaking research from Pablo Bernabeu's 2022 thesis, which reveals that the interplay between these two systems is not fixed but constantly adapts based on three critical levels:</p>
-<ol>
-<li>
-<p>The task: The brain strategically deploys simulation only when a task demands deep semantic processing, conserving cognitive energy for shallower tasks.</p>
-</li>
-<li>
-<p>The word: Concrete concepts like &lsquo;hammer&rsquo; rely more heavily on sensorimotor simulation than abstract concepts like &lsquo;justice&rsquo;.</p>
-</li>
-<li>
-<p>The individual: We explore the fascinating &lsquo;task-relevance advantage,&rsquo; a consistent finding that a larger vocabulary isn't just about knowing more words, but about possessing the cognitive finesse to flexibly and efficiently deploy the right mental system for the job at hand.</p>
-</li>
-</ol>
-<p>We also pull back the curtain on the science itself, discussing the &lsquo;replication crisis&rsquo; and the immense statistical power needed to reliably detect these subtle cognitive effects—often requiring over 1,000 participants for a single experiment. This methodological deep dive reveals why the science of the mind requires massive, collaborative efforts to move forward.</p>
-<p>Finally, we look to the future, exploring how the recent explosion of Large Language Models (LLMs) provides a fascinating test case for these theories, and how new frontiers like interoception—our sense of our body's internal state—are expanding the very definition of embodiment to help explain our grasp of abstract concepts like &lsquo;anxiety&rsquo; or &lsquo;hope&rsquo;.</p>
-<p>This is a comprehensive exploration of the intricate, context-dependent dance between language and body that creates meaning in every moment. It will fundamentally change the way you think about the words you use every day.</p>
+<p><i class="fa-solid fa-wand-magic-sparkles" style='color:darkgrey;'></i> <span style='color:darkgrey; font-style:italic; font-size:85%;'>Created using Google Gemini and NotebookLM.</span></p>
+<p>How do scientists measure a thought? While the great philosophical questions about the nature of meaning have been debated for centuries, the last few decades have seen the development of a sophisticated scientific toolkit designed to turn these abstract queries into concrete, measurable data. In this episode of Codex Mentis, we go behind the curtains of cognitive science to explore the very methods used to investigate how the human brain processes language and constructs meaning.</p>
+<p>Moving from the &lsquo;what&rsquo; to the &lsquo;how&rsquo;, this programme offers a detailed review of the modern psycholinguist's toolkit. The journey begins with the foundational behavioural paradigms that capture cognition in milliseconds. Discover the logic behind the Lexical Decision Task, where a simple button press reveals the speed of word recognition, and the Semantic Priming paradigm, which uses subtle manipulations of time to dissociate the mind's automatic reflexes from its controlled, strategic operations.</p>
+<p>From there, the discussion delves into the neuro-cognitive instruments that allow us to eavesdrop on the brain at work. Learn how Electroencephalography (EEG) and its famous N400 component provide a precise electrical timestamp for the brain's &ldquo;sense-making&rdquo; effort. Explore how Functional Magnetic Resonance Imaging (fMRI) creates detailed maps of the brain's &ldquo;semantic system,&rdquo; showing us where meaning is processed. And see how Eye-Tracking in the Visual World Paradigm provides a direct, observable trace of the brain making predictions in real time.</p>
+<p>Finally, the episode demystifies the complex statistical techniques required to analyse this intricate data. We delve into the shift from older statistical methods to modern Linear Mixed-Effects Models, which are designed to handle the inherent variability between people and words. The conversation concludes with a crucial look at the foundations of trustworthy research, examining how scientists determine the sensitivity of their experiments and calculate the required sample sizes to ensure their findings are robust and reproducible. This episode provides a comprehensive guide to the ingenious procedures scientists employ to understand one of the most fundamental aspects of human experience: how we make sense of the world, one word at a time.</p>
+<p>View <a href="/publication/pablo-bernabeu-2022-phd-thesis">sources and related content</a>.</p>
 </p>
 </div>
 <!-- The "Continue reading button. It is a block-level element that sits after the text container. -->
@@ -4999,7 +4985,60 @@ Continue reading&hellip;
 </div>
 </div>
 <div style = "position: relative; margin-top: 20px; padding-top: 56.25%;">
-<iframe src="https://www.youtube-nocookie.com/embed/1lulQ8vyEN4" frameborder="0" allowfullscreen
+<iframe src="https://www.youtube-nocookie.com/embed/ftFoNsEbJcM" frameborder="0" allowfullscreen
+style = "position:absolute; top:0; left:0; width:95%; height:95%;"></iframe>
+</div>
+<h3 id="span-stylecolorgrey-font-size702025-spannbsp-the-architecture-of-meaning-inside-the-words-we-use"><span style='color:grey; font-size:70%;'>2025 ·</span>  The architecture of meaning: Inside the words we use</h3>
+<div class="max-w-2xl w-full p-6">
+<!-- This wrapper controls the state of the component -->
+<div id="collapsible-wrapper" class="collapsible-text-wrapper">
+<!-- This div contains the text that will be collapsed -->
+<div id="collapsible-content" class="collapsible-text-content">
+<p id="main-text" class="text-base leading-relaxed mb-0">
+<p><i class="fa-solid fa-wand-magic-sparkles" style='color:darkgrey;'></i> <span style='color:darkgrey; font-style:italic; font-size:85%;'>Created using Google Gemini and NotebookLM.</span></p>
+<p>What happens in your brain when you understand a simple word? It seems instantaneous, but this seemingly simple act is at the heart of one of the deepest mysteries of the human mind and has sparked one of the longest-running debates in cognitive science.</p>
+<p>In this episode of Codex Mentis, we journey deep into the architecture of meaning to explore the battle between two powerful ideas. For decades, scientists were divided. Is your brain a vast, abstract dictionary, processing words like &lsquo;kick&rsquo; by looking up amodal symbols and their connections to other symbols? Or is it a sophisticated simulator, where understanding &lsquo;kick&rsquo; involves partially re-enacting the physical experience in your motor cortex?</p>
+<p>We begin with a landmark finding—the &lsquo;object orientation effect&rsquo;—that seemed to provide a knockout punch for the simulation theory, only to see this cornerstone of embodied cognition crumble under the immense rigor of a massive, multi-lab replication study involving thousands of participants across 18 languages. This &lsquo;failed&rsquo; replication didn't end the debate; it forced the entire field to evolve, moving beyond simple dichotomies and toward a more nuanced and profound understanding of the mind.</p>
+<p>This episode unpacks the state-of-the-art &lsquo;hybrid&rsquo; model of conceptual processing, which is at the forefront of modern cognitive science. Discover how your brain pragmatically and flexibly uses two complementary systems in a dynamic partnership. The first is a fast, efficient language system that operates on statistical patterns, much like a modern AI, providing a &lsquo;shallow&rsquo; but rapid understanding of a word's context. The second is a slower, more resource-intensive sensorimotor system that provides &lsquo;deep&rsquo; grounding by simulating a word's connection to our lived, bodily experience.</p>
+<p>The episode delves into the groundbreaking research from Pablo Bernabeu's 2022 thesis, which reveals that the interplay between these two systems is not fixed but constantly adapts based on three critical levels:</p>
+<ol>
+<li>
+<p>The task: The brain strategically deploys simulation only when a task demands deep semantic processing, conserving cognitive energy for shallower tasks.</p>
+</li>
+<li>
+<p>The word: Concrete concepts like &lsquo;hammer&rsquo; rely more heavily on sensorimotor simulation than abstract concepts like &lsquo;justice&rsquo;.</p>
+</li>
+<li>
+<p>The individual: We explore the fascinating &lsquo;task-relevance advantage,&rsquo; a consistent finding that a larger vocabulary isn't just about knowing more words, but about possessing the cognitive finesse to flexibly and efficiently deploy the right mental system for the job at hand.</p>
+</li>
+</ol>
+<p>We also pull back the curtain on the science itself, discussing the &lsquo;replication crisis&rsquo; and the immense statistical power needed to reliably detect these subtle cognitive effects—often requiring over 1,000 participants for a single experiment. This methodological deep dive reveals why the science of the mind requires massive, collaborative efforts to move forward.</p>
+<p>Finally, we look to the future, exploring how the recent explosion of Large Language Models (LLMs) provides a fascinating test case for these theories, and how new frontiers like interoception—our sense of our body's internal state—are expanding the very definition of embodiment to help explain our grasp of abstract concepts like &lsquo;anxiety&rsquo; or &lsquo;hope&rsquo;.</p>
+<p>This is a comprehensive exploration of the intricate, context-dependent dance between language and body that creates meaning in every moment. It will fundamentally change the way you think about the words you use every day.</p>
+<p>View <a href="/publication/pablo-bernabeu-2022-phd-thesis">sources and related content</a>.</p>
+</p>
+</div>
+<!-- The "Continue reading button. It is a block-level element that sits after the text container. -->
+<p><button id="read-more-btn" class="read-more-btn link-style-button mt-2" onclick="
+console.log('Inline onclick fired!');
+event.preventDefault();
+event.stopPropagation();
+var wrapper = document.getElementById('collapsible-wrapper');
+var content = document.getElementById('collapsible-content');
+if (wrapper && content) {
+content.style.maxHeight = content.scrollHeight + 'px';
+wrapper.classList.add('is-expanded');
+console.log('Expansion successful via inline onclick!');
+} else {
+console.log('Elements not found in inline onclick');
+}
+">
+Continue reading&hellip;
+</button></p>
+</div>
+</div>
+<div style = "position: relative; margin-top: 20px; padding-top: 56.25%;">
+<iframe src="https://www.youtube-nocookie.com/embed/Uii-4ybSmKM" frameborder="0" allowfullscreen
 style = "position:absolute; top:0; left:0; width:95%; height:95%;"></iframe>
 </div>
 <h3 id="span-stylecolorgrey-font-size702025-spannbsp-segmentation-of-erps-involving-several-markers-and-time-adjustments-in-brainvision-analyzer"><span style='color:grey; font-size:70%;'>2025 ·</span>  Segmentation of ERPs involving several markers and time adjustments in BrainVision Analyzer</h3>
