--- a/publication/the-interplay-between-linguistic-and-embodied-systems-in-conceptual-processing/index.html
+++ b/publication/the-interplay-between-linguistic-and-embodied-systems-in-conceptual-processing/index.html
@@ -1043,6 +1043,12 @@
 <h3>Reference</h3>
 <p>Bernabeu, P., Lynott, D., &amp; Connell, L. (2021). <em>Preregistration: The interplay between linguistic and embodied systems in conceptual processing</em>. OSF. <a href="https://osf.io/ftydw" class="uri">https://osf.io/ftydw</a></p>
 </div>
+<div id="related-podcast" class="section level3">
+<h3>Related podcast</h3>
+<p><i class="fa-solid fa-wand-magic-sparkles" style='color:darkgrey;'></i> <span style="color:darkgrey; font-style:italic; font-size:85%;">Created using Google Gemini and NotebookLM.</span></p>
+<iframe style="border-radius:12px" src="https://open.spotify.com/embed/episode/56mb7N81kp3VPzhcijQXi0?utm_source=generator" width="100%" height="152" frameBorder="0" allowfullscreen allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy">
+</iframe>
+</div>
 <div id="related-references" class="section level3">
 <h3>Related references</h3>
 <div class="related-references">
