--- a/publication/bernabeu-2017-mphil-thesis/index.html
+++ b/publication/bernabeu-2017-mphil-thesis/index.html
@@ -1120,6 +1120,9 @@
 <div class = 'hanging-indent'>
 <p>Bernabeu, P. (2017). <em>Modality switches occur early and extend late in conceptual processing: Evidence from ERPs</em>. PsyArXiv. <a href="https://doi.org/10.31234/osf.io/5gjvk">https://doi.org/10.31234/osf.io/5gjvk</a></p>
 </div>
+<h3 id="related-podcast">Related podcast</h3>
+<p><i class="fa-solid fa-wand-magic-sparkles" style='color:darkgrey;'></i> <span style='color:darkgrey; font-style:italic; font-size:85%;'>Created using Google Gemini and NotebookLM.</span></p>
+<iframe style="border-radius:12px" src="https://open.spotify.com/embed/episode/56mb7N81kp3VPzhcijQXi0?utm_source=generator" width="100%" height="152" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
 <h3 id="related-references">Related references</h3>
 <div class = 'related-references'>
 <div class = 'hanging-indent'>
