--- a/publication/chen-etal-inprep/index.html
+++ b/publication/chen-etal-inprep/index.html
@@ -1093,9 +1093,10 @@
 <br>
 <br>
 <p><strong>Related:</strong> <a href="https://doi.org/10.1017/S0140525X18000730">the value of a replication study during a PhD</a>.</p>
-<h3 id="related-ai-podcast">Related AI podcast</h3>
-<p><i class="fa-solid fa-wand-magic-sparkles" style='color:darkgrey;'></i> <span style='color:darkgrey; font-style:italic;'>Created using Google Gemini and NotebookLM.</span></p>
+<h3 id="related-podcasts">Related podcasts</h3>
+<p><i class="fa-solid fa-wand-magic-sparkles" style='color:darkgrey;'></i> <span style='color:darkgrey; font-style:italic; font-size:85%;'>Created using Google Gemini and NotebookLM.</span></p>
 <iframe style="border-radius:12px" src="https://open.spotify.com/embed/episode/32uBJncddvl04ID4WlSkhm?utm_source=generator" width="100%" height="152" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
+<iframe style="border-radius:12px" src="https://open.spotify.com/embed/episode/56mb7N81kp3VPzhcijQXi0?utm_source=generator" width="100%" height="152" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
 <h3 id="reference">Reference</h3>
 <div class = 'hanging-indent'>
 <p>Chen, S.-C., Buchanan, E. M., Kekecs, Z., Miller, J. K., Szabelska, A., Aczel, B., Bernabeu, P., Forscher, P. S., Szuts, A., Vally, D. Z., Al-Hoorie, A. H., Helmy, M., Silva, C. S. A. da, Silva, L. O. da, Moraes, Y. L. de, Hsu, R. M. C. S., Mafra, A. L., Valentova, J. V., Varella, M. A. C., … Chartier, C. R. (accepted). Investigating object orientation effects across 18 languages. <em>Current Psychology</em>. <a href="https://doi.org/10.31219/osf.io/2qf6w">https://doi.org/10.31219/osf.io/2qf6w</a></p>
