--- a/publication/dutch-modality-exclusivity-norms-for-336-properties-and-411-concepts/index.html
+++ b/publication/dutch-modality-exclusivity-norms-for-336-properties-and-411-concepts/index.html
@@ -1074,6 +1074,9 @@
 <div class = 'hanging-indent'>
 <p>Bernabeu, P. (2018). <em>Dutch modality exclusivity norms for 336 properties and 411 concepts</em>. PsyArXiv. <a href="https://doi.org/10.31234/osf.io/s2c5h">https://doi.org/10.31234/osf.io/s2c5h</a></p>
 </div>
+<h3 id="related-podcast">Related podcast</h3>
+<p><i class="fa-solid fa-wand-magic-sparkles" style='color:darkgrey;'></i> <span style='color:darkgrey; font-style:italic; font-size:85%;'>Created using Google Gemini and NotebookLM.</span></p>
+<iframe style="border-radius:12px" src="https://open.spotify.com/embed/episode/56mb7N81kp3VPzhcijQXi0?utm_source=generator" width="100%" height="152" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
 <h3 id="related-references">Related references</h3>
 <div class = 'related-references'>
 <div class = 'hanging-indent'>
