--- a/publication/language-vision-conceptual-processing/index.html
+++ b/publication/language-vision-conceptual-processing/index.html
@@ -1098,10 +1098,12 @@
 </h3>
 </button>
 <p></a></p>
-<div id="related-ai-podcast" class="section level3">
-<h3>Related AI podcast</h3>
-<p><i class="fa-solid fa-wand-magic-sparkles" style='color:darkgrey;'></i> <span style="color:darkgrey; font-style:italic;">Created using Google Gemini and NotebookLM.</span></p>
+<div id="related-podcasts" class="section level3">
+<h3>Related podcasts</h3>
+<p><i class="fa-solid fa-wand-magic-sparkles" style='color:darkgrey;'></i> <span style="color:darkgrey; font-style:italic; font-size:85%;">Created using Google Gemini and NotebookLM.</span></p>
 <iframe style="border-radius:12px" src="https://open.spotify.com/embed/episode/32uBJncddvl04ID4WlSkhm?utm_source=generator" width="100%" height="152" frameBorder="0" allowfullscreen allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy">
+</iframe>
+<iframe style="border-radius:12px" src="https://open.spotify.com/embed/episode/56mb7N81kp3VPzhcijQXi0?utm_source=generator" width="100%" height="152" frameBorder="0" allowfullscreen allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy">
 </iframe>
 </div>
 <div id="reference" class="section level3">
