--- a/index.html
+++ b/index.html
@@ -3833,12 +3833,6 @@
 </thead>
 <tbody>
 <tr>
-<td>Feb 2025</td>
-<td>Talk</td>
-<td><a href="/presentation/unpacking-erp-responses-in-artificial-language-learning">Unpacking ERP Responses in Artificial Language Learning </a></td>
-<td>Lunch Seminar at the <a href="https://uit.no/research/clabl">Center for Language, Brain and Learning (C-LaBL)</a>, UiT The Arctic University of Norway</td>
-</tr>
-<tr>
 <td>Apr 2025</td>
 <td>Poster</td>
 <td>The interplay of cognition and bilingual repertoires in L3 learning</td>
@@ -3849,6 +3843,12 @@
 <td>Poster</td>
 <td><a href="/presentation/smart-starts-cognitive-differences-predict-prior-knowledge-involvement-in-language-learning">Smart starts: Cognitive differences predict prior knowledge involvement in language learning</a></td>
 <td>(1) <a href="https://www.sepex24.com/_files/ugd/5182f6_f8e5d3cd93584a0db65e47222c87051a.pdf">XIV Conference of the Spanish Society for Experimental Psychology (SEPEX)</a>, Almería; <br> (2) <a href="https://cdn.ymaws.com/www.psychonomic.org/resource/resmgr/annual_meeting/2024_meeting/abstract_book/2024_Abstracts_Final.pdf">65th Annual Meeting of the Psychonomic Society</a>, New York; <br> (3) <a href="https://www.upf.edu/documents/3186291/276286902/3rd+MULTILINGUA+Network+Meeting+program-1-2.pdf/95e13a92-e3f2-e486-3162-05acac84c937?t=1740389444336">3rd MULTILINGUA Network Meeting</a>, Barcelona</td>
+</tr>
+<tr>
+<td>Feb 2025</td>
+<td>Talk</td>
+<td><a href="/presentation/unpacking-erp-responses-in-artificial-language-learning">Unpacking ERP Responses in Artificial Language Learning </a></td>
+<td>Lunch Seminar at the <a href="https://uit.no/research/clabl">Center for Language, Brain and Learning (C-LaBL)</a>, UiT The Arctic University of Norway</td>
 </tr>
 <tr>
 <td>Nov 2024</td>
@@ -4946,7 +4946,7 @@
   
     <div class="col-12 col-lg-4 section-heading">
       <h1>Videos and Podcasts</h1>
-      <p>Not the most riveting channel on <a href="https://www.youtube.com/playlist?list=PLJ8d7PauMiCs6TkzJfv5cT88oAJhzoy0N">YouTube</a>—much less on <a href="https://open.spotify.com/show/4QXENVjprdaGkTvOexGvD3">Spotify</a>, <a href="https://podcasts.apple.com/au/podcast/codex-mentis-science-and-tech-to-study-cognition/id1836910507">Apple Podcasts</a> and <a href="https://www.ivoox.com/en/podcast-codex-mentis-science-and-tech-to-study-cognition_sq_f12741704_1.html">iVoox</a>. <br> <div style = 'position: relative; margin-top: 20px; padding-top: 56.25%;'><iframe src='https://www.youtube-nocookie.com/embed/nh7E1L8Evc8' frameborder='0' allowfullscreen style = 'position:absolute; top:0; left:0; width:70%; height:100%;'></iframe></div></p>
+      <p>Not the most riveting channel on <a href="https://www.youtube.com/@pablo-bernabeu/videos">YouTube</a>—much less on <a href="https://open.spotify.com/show/4QXENVjprdaGkTvOexGvD3">Spotify</a>, <a href="https://podcasts.apple.com/au/podcast/codex-mentis-science-and-tech-to-study-cognition/id1836910507">Apple Podcasts</a> and <a href="https://www.ivoox.com/en/podcast-codex-mentis-science-and-tech-to-study-cognition_sq_f12741704_1.html">iVoox</a>. <br> <div style = 'position: relative; margin-top: 20px; padding-top: 56.25%;'><iframe src='https://www.youtube-nocookie.com/embed/nh7E1L8Evc8' frameborder='0' allowfullscreen style = 'position:absolute; top:0; left:0; width:70%; height:100%;'></iframe></div></p>
     </div>
     <div class="col-12 col-lg-8">
       <div style = "margin-bottom: -2.5%;"></div>
