--- a/index.html
+++ b/index.html
@@ -4157,7 +4157,7 @@
 <p>Beyond education and digital technologies, my interests include cognitive psychology and neuroscience, linguistics, digital technologies, data science, research methods and open science.</p>
 <p>I have worked with a wide range of research methods, including behavioural and EEG experiments, corpus analysis and computational modelling.</p>
 <p>Materials from my research are available at <a href="https://osf.io/25u3x">osf.io/25u3x</a>.</p>
-<p>Want to find out more? Please drop me an <a href="mailto:pcbernabeu@gmail.com">email</a> or try this <a href="https://chatgpt.com/g/g-67b0b84a30588191aeff5991b6eb1c15-pb-core">chatbot</a> for fun.</p>
+<p>Want to find out more? Please drop me an <a href="mailto:pcbernabeu@gmail.com">email</a> (or try this <a href="https://chatgpt.com/g/g-67b0b84a30588191aeff5991b6eb1c15-pb-core">chatbot</a> for fun).</p>
 
 
     <div class="row">
@@ -4659,9 +4659,9 @@
       <table>
 <thead>
 <tr>
-<th></th>
-<th></th>
-<th></th>
+<th>Year</th>
+<th>Grant/Award</th>
+<th>Purpose/Reason</th>
 </tr>
 </thead>
 <tbody>
@@ -4946,7 +4946,7 @@
   
     <div class="col-12 col-lg-4 section-heading">
       <h1>Videos and Podcasts</h1>
-      <p>Not the most riveting channel on <a href="https://www.youtube.com/@pablo-bernabeu/videos">YouTube</a>—much less on <a href="https://open.spotify.com/show/4QXENVjprdaGkTvOexGvD3">Spotify</a>, <a href="https://podcasts.apple.com/au/podcast/codex-mentis-science-and-tech-to-study-cognition/id1836910507">Apple Podcasts</a> and <a href="https://www.ivoox.com/en/podcast-codex-mentis-science-and-tech-to-study-cognition_sq_f12741704_1.html">iVoox</a>. <br> <div style = 'position: relative; margin-top: 20px; padding-top: 56.25%;'><iframe src='https://www.youtube-nocookie.com/embed/nh7E1L8Evc8' frameborder='0' allowfullscreen style = 'position:absolute; top:0; left:0; width:70%; height:100%;'></iframe></div></p>
+      <p>Not the most riveting channel on <a href="https://www.youtube.com/@pablo-bernabeu/videos">YouTube</a>—much less on <a href="https://open.spotify.com/show/4QXENVjprdaGkTvOexGvD3">Spotify</a>, <a href="https://podcasts.apple.com/au/podcast/codex-mentis-science-and-tech-to-study-cognition/id1836910507">Apple Podcasts</a> or <a href="https://www.ivoox.com/en/podcast-codex-mentis-science-and-tech-to-study-cognition_sq_f12741704_1.html">iVoox</a>. <br> <div style = 'position: relative; margin-top: 20px; padding-top: 56.25%;'><iframe src='https://www.youtube-nocookie.com/embed/nh7E1L8Evc8' frameborder='0' allowfullscreen style = 'position:absolute; top:0; left:0; width:70%; height:100%;'></iframe></div></p>
     </div>
     <div class="col-12 col-lg-8">
       <div style = "margin-bottom: -2.5%;"></div>
