--- a/index.html
+++ b/index.html
@@ -1044,7 +1044,7 @@
 
 
 
-<a class="btn btn-outline-primary my-1 mr-1 btn-sm" href="https://doi.org/10.31219/osf.io/2qf6w" target="_blank" rel="noopener">
+<a class="btn btn-outline-primary my-1 mr-1 btn-sm" href="https://doi.org/10.1007/s12144-025-08304-x" target="_blank" rel="noopener">
   <i class="fa fa-file-pdf"></i> Full text
 </a>
 
