--- a/publication/chen-etal-inprep/index.html
+++ b/publication/chen-etal-inprep/index.html
@@ -976,7 +976,7 @@
 
 
 
-<a class="btn btn-outline-primary my-1 mr-1" href="https://doi.org/10.31219/osf.io/2qf6w" target="_blank" rel="noopener">
+<a class="btn btn-outline-primary my-1 mr-1" href="https://doi.org/10.1007/s12144-025-08304-x" target="_blank" rel="noopener">
   <i class="fa fa-file-pdf"></i> Full text
 </a>
 
@@ -1068,7 +1068,7 @@
     
 
     
-    <a href=https://doi.org/10.31219/osf.io/2qf6w>
+    <a href=https://doi.org/10.1007/s12144-025-08304-x>
       <button class="full-text-btn">
         <i class="fa fa-file" style='color:grey;'></i> &nbsp;&nbsp; 
         <span>View <b>full text</b></span>
@@ -1099,7 +1099,7 @@
 <iframe style="border-radius:12px" src="https://open.spotify.com/embed/episode/56mb7N81kp3VPzhcijQXi0?utm_source=generator" width="100%" height="152" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
 <h3 id="reference">Reference</h3>
 <div class = 'hanging-indent'>
-<p>Chen, S.-C., Buchanan, E. M., Kekecs, Z., Miller, J. K., Szabelska, A., Aczel, B., Bernabeu, P., Forscher, P. S., Szuts, A., Vally, D. Z., Al-Hoorie, A. H., Helmy, M., Silva, C. S. A. da, Silva, L. O. da, Moraes, Y. L. de, Hsu, R. M. C. S., Mafra, A. L., Valentova, J. V., Varella, M. A. C., … Chartier, C. R. (accepted). Investigating object orientation effects across 18 languages. <em>Current Psychology</em>. <a href="https://doi.org/10.1007/s12144-025-08304-x">https://doi.org/10.1007/s12144-025-08304-x</a></p>
+<p>Chen, S.-C., Buchanan, E. M., Kekecs, Z., Miller, J. K., Szabelska, A., Aczel, B., Bernabeu, P., Forscher, P. S., Szuts, A., Vally, D. Z., Al-Hoorie, A. H., Helmy, M., Silva, C. S. A. da, Silva, L. O. da, Moraes, Y. L. de, Hsu, R. M. C. S., Mafra, A. L., Valentova, J. V., Varella, M. A. C., … Chartier, C. R. (2025). Investigating object orientation effects across 18 languages. <em>Current Psychology</em>. <a href="https://doi.org/10.1007/s12144-025-08304-x">https://doi.org/10.1007/s12144-025-08304-x</a></p>
 </div>
 </div>
 
