--- a/publication/third-language-longitudinal-data-artificial-language-learning-eeg/index.html
+++ b/publication/third-language-longitudinal-data-artificial-language-learning-eeg/index.html
@@ -1109,6 +1109,8 @@
 <p><i class="fa-solid fa-wand-magic-sparkles" style='color:darkgrey;'></i> <span style="color:darkgrey; font-style:italic; font-size:85%;">Created using Google Gemini and NotebookLM.</span></p>
 <iframe style="border-radius:12px" src="https://open.spotify.com/embed/episode/6FoBbM2dDqsVC1HvdNjC7o?utm_source=generator" width="100%" height="152" frameBorder="0" allowfullscreen allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy">
 </iframe>
+<iframe style="border-radius:12px" src="https://open.spotify.com/embed/episode/3lG3mXJLboEZfRsaGdBsIn?utm_source=generator" width="100%" height="152" frameBorder="0" allowfullscreen allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy">
+</iframe>
 </div>
 <div id="contributors-and-acknowledgements" class="section level3">
 <h3>Contributors and acknowledgements</h3>
